# SET

./: README.md
SET/: __init__.py  io.py  shock.py
cgal_wrapper/: CMakeLists.txt  PolyhedralSurf.h  PolyhedralSurf_operations.h  PolyhedralSurf_rings.h  bary.h  cone.h  curvature.h  dbscan.h  detachment.h  econe.h  interp.h  kdtree.h  ode.h  path.h  poly.h  prandtl_meyer.h  shock.h  types.h  wedge.h  wrapper.cpp
examples/: HB2.py  blunted_elliptic_ogive.py  blunted_ogive.py  elliptic_ogive.py  ogive.py  ogiveAoA.py  x43.py
geometries/: HB2.ply  blunted_elliptic_ogive.ply  blunted_ogive.ply  elliptic_ogive.ply  ogive.ply  x43.ply
